Fix sub-menu hidden when scrollbar is present

--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -93,11 +93,12 @@
     }
 
     &__item {
-        &:hover .sub-menu {
+        &--active .sub-menu {
             display: grid;
         }
     }
 
+    &__item--active>&__link,
     &__item:hover>&__link {
         color: #0071DC;
         font-weight: 500;
